# echo-dfir

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.md  README.md  WINNING_RUNBOOK.md  docker-compose.yml  install.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: ACCURACY_REPORT.md  ARCHITECTURE.md  DEMO_VIDEO_SCRIPT.md  DEVPOST_DESCRIPTION.md
echo_agent/: __init__.py  audit.py  cli.py  graph.py  llm.py
echo_agent/nodes/: __init__.py  critic.py  executor.py  finalizer.py  planner.py  reflector.py  validator.py
echo_mcp/: __init__.py  server.py
echo_mcp/knowledge/: __init__.py  caveats.yaml
echo_mcp/schemas/: __init__.py
echo_mcp/tools/: __init__.py  _common.py  evtx.py  mft_be.py  prefetch.py  registry.py  volatility.py
samples/CASE_001_synthetic/: MFT  README.md
samples/CASE_001_synthetic/Windows/AppCompat/Programs/: Amcache.hve
scripts/: run_demo.sh  verify_install.sh
tests/adversarial/: test_deadlock_prevention.py  test_forensic_accuracy.py  test_prompt_injection.py
tests/integration/: test_pipeline.py
tests/spoliation/: test_spoliation.py
tests/unit/: test_audit.py  test_core.py
validators/: __init__.py  cross_source.py  run_benchmark.py  score.py
validators/ground_truth/: CASE_001.json
