[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-dfir"
version = "1.0.0"
description = "ECHO — Evidence-Correlating Hallucination-Observed agent. An autonomous DFIR agent for the SANS FIND EVIL! hackathon."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ShyamAlan T" }]
keywords = ["dfir", "forensics", "incident-response", "ai-agent", "mcp", "langgraph", "sans-sift"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    # Agent + graph
    "langgraph>=0.2.40",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    # MCP
    "fastmcp>=0.5.0",
    "mcp>=1.0.0",
    # Schema + validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    # LLM client (local)
    "ollama>=0.4.0",
    # CLI + UX
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Forensic parsers (SIFT VM has many; pin Python ones we control)
    "python-evtx>=0.7.4",
    "python-registry>=1.3.1,<2.0",
    "analyzeMFT>=2.0.5",
    # Utility
    "orjson>=3.10.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
echo = "echo_agent.cli:app"
echo-mcp = "echo_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["echo_agent*", "echo_mcp*", "validators*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "BLE", "A", "C4", "T20", "PT", "RET", "SIM"]
ignore = ["S101", "T201", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --tb=short"
markers = [
    "spoliation: red-team evidence integrity tests",
    "integration: end-to-end tests requiring SIFT tools",
    "slow: tests >5s",
]

[tool.coverage.run]
branch = true
source = ["echo_agent", "echo_mcp", "validators"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
